--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ header > nav {
   flex: 70%;
   text-align: right;
   margin-right: 5%;
-  flex-wrap: nowrap;
 }
 
 header > nav > button {
@@ -46,7 +45,6 @@ header > nav > button {
   height: 45px;
   color: var(--primaria);
   transition: .7s;
-  flex-wrap: nowrap;
 }
 
 header > nav > button:hover {
@@ -450,4 +448,27 @@ footer h1 {
     width: 40%;
     color: white;
   }
+}
+
+@media (max-width: 820px) and (min-width: 769px) {
+    header > h1 {
+      /* border: 3px solid red; */
+      flex: 40%;
+      margin: 10px 5% 10px 5%;
+      color: var(--primaria);
+      font-family: "Lobster", cursive;
+      font-size: 35px;
+      text-align: center;
+    }
+  
+    header > nav > button {
+      font-size: 14px;
+      border: none;
+      background-color: transparent;
+      width: 100px;
+      height: 40px;
+      color: var(--primaria);
+      transition: .7s;
+      flex-wrap: nowrap;
+    }
 }
